<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="projectViewModel"
            type="com.example.deepak.mvvmtestprojectdetail.viewmodal.ProjectViewModal" />
    </data>




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:elevation="4dp"
            app:title="Project Detail"
            app:titleTextColor="#ffffff"
            />

        <TextView
            android:id="@+id/loading_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/loading_project"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingTop="16dp"
            app:visibleGone="@{!isLoading}" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:src="@drawable/github" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_name"
                android:paddingBottom="5dp"
                android:text="@{projectViewModel.project.name}"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_description"
                android:text="@{projectViewModel.project.description}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_langugae"
                android:text="@{String.format(@string/languages,projectViewModel.project.language)}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/project_watchers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_watchers"
                android:text="@{String.format(@string/languages, projectViewModel.project.watchers)}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/project_issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/open_issues"
                android:text="@{String.format(@string/openIssues, projectViewModel.project.open_issues)}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/project_created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/created_at"
                android:text="@{String.format(@string/createdat, projectViewModel.project.created_at)}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/project_updated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/updated_at"
                android:text="@{String.format(@string/updatedat, projectViewModel.project.updated_at)}"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/project_clone_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clone_url"
                android:text="@{String.format(@string/cloneurl, projectViewModel.project.clone_url)}"
                android:textSize="16sp" />


        </LinearLayout>
    </FrameLayout>

</layout>