<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:elevation="4dp"
            app:title="Project List"
            app:titleTextColor="#ffffff"
            />
        <TextView
            android:id="@+id/loading_project"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/loading_projects"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/google_github_projects"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/project_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/project_list"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"

                />


        </LinearLayout>


    </LinearLayout>
</layout>