<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="project"
            type="com.example.deepak.mvvmtestprojectdetail.service.model.Project" />

        <variable
            name="callback"
            type="com.example.deepak.mvvmtestprojectdetail.view.callback.ProjectClickCallback" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="@{()-> callback.onClick(project)}"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circular"
                android:gravity="center_vertical|center_horizontal"
                android:text="@{String.valueOf( project.name.charAt(0))}"
                android:textSize="25sp"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/name_project"
                    android:text="@{project.name}"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/project_langugae"
                    android:text="@{String.format(@string/languages, project.language)}"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/project_watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/project_watchers"
                    android:text="@{String.format(@string/watchers, project.watchers)}"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>